# run-crate-runner

./: .gitignore  README.md  pyproject.toml
src/run_crate/: _version.py  crate.py  runner.py
src/run_crate_runner/: __init__.py  _version.py  cli.py
